--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -107,13 +107,27 @@ Ebenso komplex wie die Klimamodelle, die die Verstrickungen verschiedenster Phä
 
 Die Relevanz der Abschlussarbeit basiert auf der Annahme, dass eine genauere Prognose über die erzeugte Strommenge helfen würde das Stromnetz zu stabilisieren und Netzschwankungen, ergo das Risiko eines Brown- oder sogar Black-Outs zu minimieren. Anhand der neu gewonnenen
 Information könnten kurzfristige Stromimporte beziehungsweise -exporte besser reguliert werden. Ebenso wäre es denkbar, dass man für die Industrie und/ oder Endverbraucher mehr Anreize schafft ihren Stromverbrauch zu einem gewissen Grad an die Verfügbarkeit des Stroms
-anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls hilfreich wäre.
+anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls hilfreich wäre. Zuletzt könnten starke Abweichungen zwischen der Prognose und der tatsächlich erzeugten Strommenge ein Indiz darauf sein, dass die Solaranlage eine Wartung benögtigt.
 
 % https://zeitung.faz.net/fas/technik-und-motor/2023-05-14/fuenf-am-tag/892835.html
 
 \section{Stand der Technik}
 
 \subsection{Strombedarf in Deutschland}
+
+\subsection{Aufbau des Stromnetzes}
+
+Um das Stromnetz genauer zu betrachten, muss zunächst zwischen Hochspannungsnetzen, Mittelspannungsnetzen und Niederspannungsnetzen differenziert werden. Mit 60 bis 220 Kilovolt Spannung ist der landesweite Transport des Strom signifikant effizienter, da durch die höhere Spannung die Stromstärke gesenkt werden. Schließlich nimmt der Verlust quadratisch mit der Stromstärke zu. Sozusagen sind Hochspannungsnetze die Autobahnen des Stromnetzes. (QUELLE)
+
+Bisher wurden in der öffentliche Debatte die großen Stromtrassen thematisiert. Beschwerden, dass die Trassen zu nah am eigenen Grundstück wären, endeten im schleppenden Ausbau. 
+Keineswegs zu unterschätzen sei jedoch die Wichtigkeit der lokalen Niederspannungsnetze. Die dezentrale Energieerzeugung führt dazu, dass die Energiewende genauso dort stattfinden muss. Leitungen, Trafos und Schaltkästen müssen weiter ausgebaut und erneuert werden. Nicht übertrieben wäre es zu sagen, dass die Energiewende im Verteilernetz stattfindet.
+
+Heutzutage sind Verbraucher längst nicht mehr nur Verbraucher, stattdessen werden viele von ihnen zu sogenannten Prosumenten. Hinter dem Begriff verbergen sich die Wörter Konsument und Produzent. Bereits 2022 gehörten ungefähr 1,4 Millionen private Haushalte zu den eben diesen Prosumenten. 
+
+
+%https://www.destatis.de/DE/Presse/Pressemitteilungen/2022/06/PD22_N037_43.html#:~:text=2020%20hatten%20etwa%201%2C4,Jahr%20der%20Erhebung%20dieser%20Angabe.
+
+%https://zeitung.faz.net/fas/wissenschaft/2023-07-09/eine-frage-der-verteilung/912527.html
 
 \subsection{Schwankungen im Stromnetz}
 
